# webdev-coursework-cardiocenter

./: .gitignore  README.md
.github/workflows/: cd.yml  ci.yml
backend/: Dockerfile  README.MD  docker-compose.yaml  pom.xml
backend/src/main/resources/: application-dev.yml  application-prod.yml  application.properties  (+2 more)
docker/: .env.example  docker-compose.prod.yaml  docker-compose.yaml
docs/: API_ML.md
frontend/: .env.example  Dockerfile  Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: dashboard.api.ts  survey.api.ts
frontend/src/components/: Sidebar.vue
frontend/src/composables/: useDashboardsCharts.ts  useHeightAnimation.ts
frontend/src/config/: survey.config.ts
frontend/src/layouts/: DefaultLayout.vue
frontend/src/mocks/: dashboardsData.ts  modelData.ts
frontend/src/pages/: DashboardsPage.vue  HomePage.vue  LoginPage.vue  ResultsPage.vue  SurveyPage.vue
frontend/src/router/: index.ts
frontend/src/stores/: dashboard.store.ts  survey.store.ts  user.store.ts
frontend/src/styles/: _basic-card.scss  _forms.scss  _modal.scss  _reset.scss  _smaller-logo.scss  _variables.scss  main.scss
frontend/src/utils/: chartConfig.ts  chartConstants.ts
ml/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml
ml/app/: config.py  main.py
ml/app/data/: region_data.json
ml/app/models/: model.cbm
ml/app/routers/: predictions.py
ml/app/schemas/: predict.py
ml/app/services/: predictions.py  transformer.py
(+79 files in other folders)
